tests/pass/BORAssign.java
package pass;

public class BORAssign {

	public int bORAssign(int x, int y) {
		int t = x;
		t |= y;
		return t;
	}
}
