tests/fail/PlusAssign.java
package fail;

public class PlusAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t += "a";
	}	
}
